--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <p id="response"></p>
  
  <script type="text/javascript">
- //apiKey: Replace this with your own Project Oxford Emotion API key, please do not use my key. I include it here so you can get up and running quickly but you can get your own key for free at https://www.projectoxford.ai/emotion 
+ /*//apiKey: Replace this with your own Project Oxford Emotion API key, please do not use my key. I include it here so you can get up and running quickly but you can get your own key for free at https://www.projectoxford.ai/emotion 
  var apiKey = "b6072cdd5104463d87fbe320689d7e26";
  
  //apiUrl: The base URL for the API. Find out what this is for other APIs via the API documentation
@@ -49,7 +49,7 @@
  {
  var data = JSON.stringify(response);
  $("#response").text(data);
- }
+ }*/
  </script>
  </body>
  
