--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  
  <head>
- <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script> -->
+ <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
  </head>
  	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 
